2023. 2. 3. Added _zPH3DPrismFromZTK and _zPH3DPyramidFromZTK to describe prism and pyramid in ZTK. [zeo_ph]
2023. 2. 2. Defined ZEO_PH_KEY_VERT and ZEO_PH_KEY_FACE, and modified zPH3DFromZTK and zPH3DFPrintZTK. [zeo_ph]
2023. 2. 2. Modified zAxisStr, zAxisFromStr, and zDirStr. [zeo_misc, zeo_errmsg]
2023. 2. 2. Debugged zShape3DMirror to check if axis is valid. [zeo_shape3d, zeo_errmsg]
2023. 1.21. Modified zRGBFromZTK to accept hexadecimal value. [zeo_render_color]
2023. 1.11. Debugged zShape3DToPH (thanks to Kenta Imanishi). [zeo_shape3d]
2022.12.19. Added zAxisInvalid in the enum type zAxis (thanks to Daishi Kaneta). [zeo_misc, zeo_vec3d_tree]
2022.12.15. Modified _zPH3DFReadSTL_ASCIIsolid to display the number of read facets. [zeo_ph_stl]
2022.12.15. Debugged _zSTLVertReg (thanks to Mr. Daishi Kaneta). [zeo_ph_stl]
2022.12. 9. Modified _zOBB3DMinDir to cope with a bug of GCC 11. This should be reseted in future. [zeo_bv3d_obb]
2022. 9. 6. Corrected designators of members of a structure to the up-to-date style. [zeo_map_terra]
2022. 9. 6. Corrected empty body of if statements. [zeo_ph_stl]
2022. 9. 6. Corrected byte-type array subscripts to integer values. [zeo_vec3d_tree, zeo_ph, zeo_nurbs, zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_bv2d_aabb, zeo_bv3d_aabb, zeo_col_box]
2022. 9. 5. Corrected arithmetic of signed integer values. [zeo_render_texture, zeo_vec2d_list, zeo_vec3d_list, zeo_vec3d_tree, zeo_ph, zeo_ph_ply, zeo_ph_obj, zeo_nurbs, zeo_shape3D_cyl, zeo_shape3D_cone, zeo_shape3d_sphere, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_bv3d_obb, zeo_brep, zeo_brep_trunc, zeo_col_gjk, zeo_col_ph, zeo_mshape3d]
2022. 9. 5. Added castings from integer to enumerate values. [zeo_pointcloud]