@@ -1,3 +1,8 @@
+2023. 2.13. Renamed members of zDir from z* to ZEO_DIR_*. [zeo_misc]
+2023. 2.13. Added _zPH3DLoopFromZTK. [zeo_ph, zeo_errmsg]
+2023. 2.13. Added zDirFromStr and modified zDirStr. [zeo_misc]
+2023. 2.13. Modified zAxisFromStr to accept the null pointer. [zeo_misc]
+2023. 2.13. Added zCW and zCCW to zDir. [zeo_misc]
 2023. 2. 3. Added _zPH3DPrismFromZTK and _zPH3DPyramidFromZTK to describe prism and pyramid in ZTK. [zeo_ph]
 2023. 2. 2. Defined ZEO_PH_KEY_VERT and ZEO_PH_KEY_FACE, and modified zPH3DFromZTK and zPH3DFPrintZTK. [zeo_ph]
 2023. 2. 2. Modified zAxisStr, zAxisFromStr, and zDirStr. [zeo_misc, zeo_errmsg]
